--- a/slope-one.cabal
+++ b/slope-one.cabal
@@ -16,9 +16,17 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:     
+  exposed-modules:     Main 
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7
+                     , bytestring >= 0.10.0.2
+                     , cassava >=0.4.2
+                     , containers >= 0.5.0.0
+                     , hashmap >= 1.0.0.2
+                     , matrix >= 0.2
+                     , text >= 1.2.0.4
+                     , unordered-containers >= 0.2.5.1
+                     , vector >= 0.10.12.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
