--- a/slope-one.cabal
+++ b/slope-one.cabal
@@ -19,12 +19,10 @@ library
   exposed-modules:     Main 
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6
                      , bytestring >= 0.10.0.2
                      , cassava >=0.4.2
                      , containers >= 0.5.0.0
-                     , hashmap >= 1.0.0.2
-                     , matrix >= 0.2
                      , text >= 1.2.0.4
                      , unordered-containers >= 0.2.5.1
                      , vector >= 0.10.12.2
@@ -35,12 +33,10 @@ executable main
   main-is:           Main.hs 
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6
                      , bytestring >= 0.10.0.2
                      , cassava >=0.4.2
                      , containers >= 0.5.0.0
-                     , hashmap >= 1.0.0.2
-                     , matrix >= 0.2
                      , text >= 1.2.0.4
                      , unordered-containers >= 0.2.5.1
                      , vector >= 0.10.12.2
